cabal-version: 3.0
name: streaming-chunked
version: 1.0.0.0

library
    exposed-modules:
        Streaming.Chunked
    signatures:
        Streaming.Chunked.Chunk
    hs-source-dirs: lib
    build-depends:
        base >= 4.10,
        streaming >= 0.2
    default-language: 
        Haskell2010

library bytes
    reexported-modules:
        Streaming.Byte,
        Streaming.Byte.Chunk
    build-depends:
        streaming-chunked,
        bytes-impl
    mixins:
        streaming-chunked 
                     (Streaming.Chunked       as Streaming.Byte) 
            requires (Streaming.Chunked.Chunk as Streaming.Byte.Chunk)
    visibility: public
    default-language: 
        Haskell2010

library bytes-impl
    exposed-modules:
        Streaming.Byte.Chunk
    hs-source-dirs: lib-bytes-impl
    build-depends:
        base >= 4.10,
        bytestring >= 0.10.10.0
    default-language: 
        Haskell2010

library chars
    reexported-modules:
        Streaming.Char,
        Streaming.Char.Chunk
    build-depends:
        streaming-chunked,
        chars-impl
    mixins:
        streaming-chunked 
                     (Streaming.Chunked       as Streaming.Char) 
            requires (Streaming.Chunked.Chunk as Streaming.Char.Chunk)
    visibility: public
    default-language: 
        Haskell2010

library chars-impl
    exposed-modules:
        Streaming.Char.Chunk
    hs-source-dirs: lib-chars-impl
    build-depends:
        base >= 4.10,
        bytestring >= 0.10.10.0,
        text >= 1.2.3.2
    default-language: 
        Haskell2010

test-suite tests
  type:           exitcode-stdio-1.0
  ghc-options:    -Wall -threaded
  hs-source-dirs: tests
  main-is:        tests.hs
  build-depends:
        base >= 4.10, 
        tasty >= 1.3.1,
        tasty-hunit >= 0.10.0.2,
        streaming >= 0.2,
        bytes,
        chars 
 default-language:    Haskell2010

